# cfLog

./: CMakeLists.txt  Doxyfile  LogStream.cpp  LogStream.h  README.md
samples/: CMakeLists.txt  sample1.cpp
src/: CMakeLists.txt  Log.cpp  Log.h  LogStream.cpp  LogStream.h
